# stqueue

./: Cargo.toml
core/: Cargo.toml
core/src/client/: consumer.rs  mod.rs
main/: Cargo.toml
main/src/: main.rs
reader/: Cargo.toml
reader/src/: client.rs
