[package]
name = "main"
version = "0.1.0"
authors = ["svgroz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
reader = { path = "../reader" }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.8" }